syntax = "proto3";
package inventory;

service InventoryService{
    rpc addToInventory(InventoryRequest) returns (InventoryResponse) {}
    rpc updateInventory(UpdateRequest) returns (UpdateResponse){}
    rpc getProductInventory(GetProductInventoryRequest) returns(GetProductInventoryResponse){}
}

enum Status {
    DEPLETED = 1;
    WARNING = 2;
    GOOD = 3;
}

enum UpdateType {
    DECREASE = 1;
    INCREASE = 2;
}

message GetProductInventoryRequest {
    required string productUUID = 1;
}

message GetProductInventoryResponse {
    required int32 productQuantity = 1;
    required Status productStatus = 2;
}


message InventoryData {
    required int32 quantity = 2;
    required Status status = 3;
    required string productUUID = 4;
}

message InventoryRequest {
    required string productUUID = 1;
}

message InventoryResponse {
    required string inventoryId = 1;
    required InventoryData inventoryData = 2;
}

message UpdateRequest {
    required UpdateType updateType = 1;
    required string productUUID = 2;
    required int32 productQuantity = 3;
}

message UpdateResponse{
    required string message = 1;
}